--- a/css/reset.css
+++ b/css/reset.css
@@ -14,3 +14,15 @@ button,
 a {
   font: inherit;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
