--- a/css/sections.css
+++ b/css/sections.css
@@ -1,7 +1,8 @@
 .hero {
-    height: 85vh;
+    min-height: 85vh;
 }
 
 .services {
-    height: 85vh;
+  min-height: 100vh;
+
 }
